--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,5 @@
 {
-  "name": "todo-categories",
-  "integrations": {
-    "cordova": {}
-  },
+  "name": "miApp",
+  "integrations": {},
   "type": "angular"
 }
