--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/cordova-builders": "^12.3.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "firebase": "^12.6.0",
     "ionicons": "^7.0.0",
+    "localforage": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
